# ecom_product_assistant

./: .gitignore  get_lib_versions.py  pyproject.toml  requirements.txt  scrapper_ui.py
data/: product_reviews.csv
prod_assistant/config/: config.yaml
prod_assistant/etl/: Web_scraping_Flipkart.ipynb  data_scrapper.py  file 2 scrapper.txt  flipkart_results.csv
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py
src/ecom_prod_assistant/: get_lib_versions.py
test/: test.ipynb
