[project]
name = "ecom-prod-assistant"
version = "0.1.0"
description = "E-Commerce Product Assistant"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
